--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
 					</p>
 
 					<p>
+						<label for="txtLastname">
+							<span>Last name: </span>
+							<strong><abbr title="required">*</abbr></strong>
+						</label>
+						<input type="text" id="txtLastname" name="txtLastname" required>
+					</p>
+
+					<p>
 						Gender:<strong><abbr title="required">*</abbr></strong>
 
 						<input type="radio" id="rbMale" name="gender" value="male" required>
